Add swagger documentation for recipes and users
