# docs/swagger.yaml
@@ -1,9 +1,116 @@
 basePath: /
+definitions:
+  models.Recipe:
+    properties:
+      country:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      instructions:
+        type: string
+      title:
+        type: string
+    type: object
+  models.User:
+    properties:
+      country:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      password:
+        type: string
+      profile_image:
+        type: string
+      role:
+        type: string
+      verified:
+        type: boolean
+    type: object
 host: localhost:8080
 info:
-  contact: {}
+  contact:
+    name: Milan Poudel
+    url: https://github.com/milanpoudelwebdeveloper
   description: This is a sample server for a recipe API.
   title: Recipe API
   version: "1.0"
-paths: {}
+paths:
+  /recipes:
+    get:
+      consumes:
+      - application/json
+      description: get all recipes
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Recipe'
+      summary: get all recipes
+      tags:
+      - recipes
+    post:
+      consumes:
+      - application/json
+      description: Post a recipe
+      parameters:
+      - description: Recipe object that needs to be added
+        in: body
+        name: recipe
+        required: true
+        schema:
+          $ref: '#/definitions/models.Recipe'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Recipe added successfully
+          schema:
+            type: string
+      summary: Post a recipe
+      tags:
+      - recipes
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: get all users
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+      summary: get all users
+      tags:
+      - users
+    post:
+      consumes:
+      - application/json
+      description: Post a user
+      parameters:
+      - description: User object that needs to be added
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: User added successfully
+          schema:
+            type: string
+      summary: Post a user
+      tags:
+      - users
 swagger: "2.0"
